Finalizando land-page

--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "mdbreact": "^4.8.2",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
+    "react-dynamic-forms": "^1.0.3",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.5"
+    "react-scripts": "1.1.5",
+    "reactstrap": "^6.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
