--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
     "react-dynamic-forms": "^1.0.3",
+    "react-responsive-carousel": "^3.1.45",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5",
     "reactstrap": "^6.5.0"
