--- a/package.json
+++ b/package.json
@@ -19,17 +19,23 @@
     "@angular/platform-browser": "~7.1.0",
     "@angular/platform-browser-dynamic": "~7.1.0",
     "@angular/router": "~7.1.0",
+    "@ng-bootstrap/ng-bootstrap": "^4.0.3",
+    "@types/jquery": "^3.3.29",
     "bootstrap": "^4.2.1",
     "core-js": "^2.5.4",
+    "fullcalendar": "^3.10.0",
+    "jquery": "^3.3.1",
+    "moment": "^2.24.0",
     "ng2-bootstrap": "^1.6.3",
     "rxjs": "~6.3.3",
+    "save": "^2.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.12.1",
     "@angular/cli": "~7.1.4",
-    "@angular/compiler-cli": "~7.1.0",
+    "@angular/compiler-cli": "^7.2.5",
     "@angular/language-service": "~7.1.0",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
