Implementação do Carousel

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jquery": "^3.3.1",
     "moment": "^2.24.0",
     "ng2-bootstrap": "^1.6.3",
+    "ngx-swiper-wrapper": "^7.2.1",
     "rxjs": "~6.3.3",
     "save": "^2.3.3",
     "tslib": "^1.9.0",
