--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "ngx-swiper-wrapper": "^7.2.1",
     "rxjs": "~6.3.3",
     "save": "^2.3.3",
+    "sweetalert2": "^8.5.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
