--- a/package.json
+++ b/package.json
@@ -32,12 +32,13 @@
     "ngx-swiper-wrapper": "^7.2.1",
     "rxjs": "~6.3.3",
     "save": "^2.3.3",
+    "sweetalert": "^2.1.2",
     "sweetalert2": "^8.5.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.12.1",
+    "@angular-devkit/build-angular": "^0.13.6",
     "@angular/cli": "~7.1.4",
     "@angular/compiler-cli": "^7.2.6",
     "@angular/language-service": "~7.1.0",
