--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "~7.1.0",
     "@ng-bootstrap/ng-bootstrap": "^4.0.3",
     "@types/jquery": "^3.3.29",
+    "angularx-social-login": "^1.2.6",
     "bootstrap": "^4.2.1",
     "core-js": "^2.5.4",
     "fullcalendar": "^3.10.0",
