--- a/angular.json
+++ b/angular.json
@@ -24,9 +24,10 @@
             ],
             "styles": [
               "src/styles.css",
-              "node_modules/fullcalendar/dist/fullcalendar.css"
+              "node_modules/fullcalendar/dist/fullcalendar.css",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
-            "scripts": []
+            "scripts": ["node_modules/jquery/dist/jquery.js"]
           },
           "configurations": {
             "production": {
