--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
     "@ng-bootstrap/ng-bootstrap": "^4.0.3",
     "@types/jquery": "^3.3.29",
     "angularx-social-login": "^1.2.6",
-    "bootstrap": "^4.2.1",
+    "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
     "fullcalendar": "^3.10.0",
-    "jquery": "^3.3.1",
+    "jquery": "^3.4.0",
     "moment": "^2.24.0",
     "ng2-bootstrap": "^1.6.3",
     "ngx-swiper-wrapper": "^7.2.1",
@@ -39,8 +39,8 @@
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.13.6",
-    "@angular/cli": "~7.1.4",
+    "@angular-devkit/build-angular": "^0.13.8",
+    "@angular/cli": "^7.3.8",
     "@angular/compiler-cli": "^7.2.6",
     "@angular/language-service": "~7.1.0",
     "@types/jasmine": "~2.8.8",
