Estrutura - Form de Códigos

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "jquery": "^3.4.0",
     "moment": "^2.24.0",
     "ng2-bootstrap": "^1.6.3",
+    "ngx-input-file": "^7.0.4",
     "ngx-swiper-wrapper": "^7.2.1",
     "popper.js": "^1.15.0",
     "rxjs": "~6.3.3",
